--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "3.1.1",
   "description": "Logging module",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,6 +18,6 @@
   },
   "homepage": "https://github.com/amm0nite/ammonite-logger#readme",
   "dependencies": {
-    "chalk": "^4.1.0"
+    "chalk": "^5.0.0"
   }
 }
